--- a/WeatherForcastLibTests/WeatherForcastLibTests.csproj
+++ b/WeatherForcastLibTests/WeatherForcastLibTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="BL\StaticsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\CityRepoTests.cs" />
+    <Compile Include="Service\WeatherServiceTests.cs" />
     <Compile Include="Util\Reports\ReportCreatorTests.cs" />
     <Compile Include="Util\RestWeatherForcastUtilTests.cs" />
   </ItemGroup>
