--- a/WeatherForcastLib/WeatherForcastLib.csproj
+++ b/WeatherForcastLib/WeatherForcastLib.csproj
@@ -63,6 +63,9 @@
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="MongoDB.Bson, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MongoDB.Bson.2.5.0\lib\net45\MongoDB.Bson.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -73,12 +76,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service\WeatherService.cs" />
+    <Compile Include="Service\WeatherSevice.cs" />
+    <Compile Include="Service\WeatherWebRetrieverService.cs" />
     <Compile Include="Util\Reports\CurrentWeatherFromAllCity.cs" />
     <Compile Include="Util\Reports\PdfCreator.cs" />
-    <Compile Include="BL\WeatherStatics.cs" />
-    <Compile Include="Model\Current.cs" />
-    <Compile Include="Model\WeatherData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\CityRepo.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -96,7 +97,16 @@
     <Compile Include="Util\Reports\ServiceReportExtension.cs" />
     <Compile Include="Util\RestWeatherForcastUtil.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DALMongoDb\DALMongoDb.csproj">
+      <Project>{E8BB1776-D6D9-4CEA-9DA2-2331CA86BA02}</Project>
+      <Name>DALMongoDb</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WeatherFocastCommonClassLibrary\WeatherFocastCommonClassLibrary.csproj">
+      <Project>{2d856813-deef-4081-ad89-1dd5c2cea013}</Project>
+      <Name>WeatherFocastCommonClassLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -110,10 +120,12 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
