--- a/WeatherForcastLib/packages.config
+++ b/WeatherForcastLib/packages.config
@@ -6,5 +6,6 @@
   <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.5.0" targetFramework="net461" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net461" />
 </packages>
